tests/transpiler/x/swift/group_by_having.error
exit status 1
/tmp/TestSwiftTranspiler_VMValid_Golden2846850477/023/main.swift:7:28: warning: forced cast of 'String' to same type has no effect
 5 | var _res: [[String: Any]] = []
 6 | for p in people {
 7 |     let _key = (p["city"]! as! String)
   |                            `- warning: forced cast of 'String' to same type has no effect
 8 |     let _ks = String(describing: _key)
 9 |     var _g = _groups[_ks] ?? ["key": _key, "items": []]

/tmp/TestSwiftTranspiler_VMValid_Golden2846850477/023/main.swift:18:51: warning: forced cast of 'Int' to same type has no effect
16 | _list.sort { a, b in String(describing: a["key"]) < String(describing: b["key"]) }
17 | for g in _list {
18 |     if ((((g["items"] as! [[String: Any]]).count) as! Int) >= 4) {
   |                                                   `- warning: forced cast of 'Int' to same type has no effect
19 |         _res.append(["city": (g["key"]! as! String), "num": (((g["items"] as! [[String: Any]]).count) as! Int)])
20 |     }

/tmp/TestSwiftTranspiler_VMValid_Golden2846850477/023/main.swift:19:103: warning: forced cast of 'Int' to same type has no effect
17 | for g in _list {
18 |     if ((((g["items"] as! [[String: Any]]).count) as! Int) >= 4) {
19 |         _res.append(["city": (g["key"]! as! String), "num": (((g["items"] as! [[String: Any]]).count) as! Int)])
   |                                                                                                       `- warning: forced cast of 'Int' to same type has no effect
20 |     }
21 | }

/tmp/TestSwiftTranspiler_VMValid_Golden2846850477/023/main.swift:23:1: error: cannot find 'json' in scope
21 | }
22 | return _res })()
23 | json(big)
   | `- error: cannot find 'json' in scope
24 | 
